--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  date_field: ^3.0.5
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.7.0
+  
 
 dev_dependencies:
   flutter_lints: ^3.0.0
