--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   date_field: ^3.0.5
+  http: ^0.13.5
+  shared_preferences: ^2.1.0
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.7.0
