--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   date_field: ^3.0.5
   http: ^0.13.5
   shared_preferences: ^2.1.0
+  quickalert: ^1.0.2
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.7.0
