--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.1.0
   quickalert: ^1.0.2
+  shimmer: ^2.0.0
+  lecle_flutter_carousel_pro: ^0.0.3
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.7.0
