--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   expandable_page_view: ^1.0.17
   dropdown_search: ^0.5.0
   flutter_stripe: ^8.0.0
+  intl: ^0.18.1
 
   flutter:
     sdk: flutter
@@ -31,14 +32,19 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Medium.ttf
+    - family: JetBrains
+      fonts:
+        - asset: assets/fonts/JetBrainsMonoNL-Medium.ttf
+    - family: BreeSerif
+      fonts:
+        - asset: assets/fonts/BreeSerif-Regular.ttf    
   uses-material-design: true
   assets:
     - assets/logo/
     - assets/background/
     - assets/content/
     - assets/content-categories/
-
-fonts:
-    - family: Poppins
-      fonts:
-        - asset: assets/fonts/Poppins-Medium.ttf
